@@ -4,6 +4,7 @@ YYYY-MM-DD
 - New things:
   - CAPI: GEOSDistanceIndexed (#795, Dan Baston)
   - CAPI: GEOSFrechetDistance (#797, Shinichi SUGIYAMA)
+  - CAPI: GEOSReverse (#872, Dan Baston)
 - Improvements
   - Interruptible snap operation (Paul Ramsey)
 - C++ API changes:
